Update Blog “2023-09-03-new-2023”

--- a/content/blog/2023-09-03-new-2023.md
+++ b/content/blog/2023-09-03-new-2023.md
@@ -3,7 +3,4 @@ createdAt: 2023-09-03
 title: new 2023
 description: new
 ---
-![](/img/placeholder-320x180.png)
-
-
-
+![](/img/landscape-travel.jpeg)
